<resources>
    <string name="app_name">hw6-room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Выйти</string>
    <string name="register_title">Зарегистрируйтесь</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="confirmPassword">Подтверждение пароля</string>
    <string name="registerButton">Зарегистрироваться</string>
    <string name="to_login_from_register">Уже зарегестрированы? Войти</string>
    <string name="login">Войти</string>
    <string name="registration_button">Регистрация</string>
    <string name="login_title">Авторизируйтесь</string>
    <string name="add_transaction_title">Добавить транзакцию</string>
    <string name="title">Название</string>
    <string name="amount">Сумма</string>
    <string name="category">Категория</string>
    <string name="save">Сохранить</string>
    <string name="enter_all_lines">Заполните все поля</string>
    <string name="Incorrect_email_or_password">Неверный email или пароль</string>
    <string name="register_succes">Регистрация успешно завершена!</string>
    <string name="register_error">Ошибка регистрации: %1$s</string>
    <string name="passwords_dont_match">Пароли не совпадают</string>
    <string name="incorrect_email">Некорректный email</string>
    <string name="All_fields_are_required">Все поля обязательны для заполнения</string>
    <string name="income">Доход</string>
    <string name="consumption">Расход</string>
    <string name="Fill_in_all_required_fields">Заполните все обязательные поля!</string>
    <string name="transaction_saved">Транзакция сохранена!</string>
    <string name="example_date">2023-10-10</string>
    <string name="_1000">+1000 ₽</string>
    <string name="name_transaction">Название транзакции</string>
</resources>